--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -134,10 +134,16 @@
       <div class="row-fluid">
         <h2>Demo</h2>
       </div>
-      <!--Talky Cloud Commenting Widget-->
-      <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
-      <script src="//localhost:3000/assets/dev_embed.js" id="talky-script"></script>
-      <!--/Talky Cloud Commenting Widget-->    </div>
+      <% if Rails.env.development? %>
+          <!--Talky Cloud Commenting Widget-->
+          <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
+          <script src="//localhost:3000/assets/dev_embed.js" id="talky-script"></script>
+          <!--/Talky Cloud Commenting Widget-->
+      <% else %>
+          <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
+          <script src="//talkycloud.com/assets/easyXDM.min.js"></script>
+      <% end %>
+    </div>
   </div>
 </div>
 <div style="display: none;">
