--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -138,9 +138,11 @@
           <!--Talky Cloud Commenting Widget-->
           <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
           <script src="//localhost:3000/assets/dev_embed.js" id="talky-script"></script>
+          <script src="//talkycloud.com/assets/easyXDM.min.js"></script>
           <!--/Talky Cloud Commenting Widget-->
       <% else %>
           <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
+          <script src="//localhost:3000/assets/embed.js" id="talky-script"></script>
           <script src="//talkycloud.com/assets/easyXDM.min.js"></script>
       <% end %>
     </div>
