--- a/app/views/admin/widgets/edit.html.erb
+++ b/app/views/admin/widgets/edit.html.erb
@@ -39,7 +39,7 @@
         external.id = "talky-script";
         var external2 = document.createElement('script');
         <% if Rails.env.development? %>
-        external2.src = "//localhost:3000/assets/easyXDM.min.js";
+        external2.src = "//talkycloud.com/assets/easyXDM.min.js";
         <% else %>
         external2.src = "//talkycloud.com/assets/easyXDM.min.js";
         <% end %>
