--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -142,7 +142,7 @@
           <!--/Talky Cloud Commenting Widget-->
       <% else %>
           <script type="text/javascript">talkyCostumerKey = '139bad6f20fd9e75bb0a0836259466'</script>
-          <script src="//localhost:3000/assets/embed.js" id="talky-script"></script>
+          <script src="//talkycloud.com/assets/embed.js" id="talky-script"></script>
           <script src="//talkycloud.com/assets/easyXDM.min.js"></script>
       <% end %>
     </div>
