--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -148,7 +148,7 @@
     </div>
   </div>
 </div>
-<div style="display: none;">
+<div style=" height:0px; overflow: hidden;">
   Along with social media development, it has generated an unprecedented volume of word of mouth surrounding brands
   and products. Customers who had historically engaged in backyard conversations with neighbors are now turning to
   online ratings and reviews, blogs, discussion groups and Twitter feeds. Previously private conversations are now
@@ -181,7 +181,6 @@
   commenter was really our customer and writing his review. I must be able to access commenters' personal information
   and delete the comment if it includes abusing language or it is spam message." he said
 </div>
-
 
 </div>
 <%#= javascript_include_tag "click" %>
