--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -34,6 +34,19 @@
 <section id="main">
   <%= render :partial => "shared/flashes" %>
 
+  <div class="modal fade hide" id="defaultModal" tabindex="-1" role="dialog" aria-labelledby="defaultModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="default-modal-header">.</h3>
+    </div>
+    <div id="default-modal-body" class="modal-body">
+      <p class='loading'><%= t(:loading) %></p>
+    </div>
+    <div id="default-modal-footer" class="modal-footer">
+      <%= link_to t(:close), "#", "data-dismiss" => "modal", :class => "btn", "aria-hidden" => true %>
+    </div>
+  </div>
+
   <%= yield %>
   <div class="container-fluid">
     <div class="row-fluid">
