--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -70,5 +70,8 @@
       </ul>
 
     </li>
+    <!--Accordion end-->
+    <%= tab :setting, :label => "Settings", :url => admin_settings_path, :icon => 'wrench', :match_path => admin_settings_path %>
+
   </ul>
 </nav>
