--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -59,7 +59,7 @@
           <% end %>
           <div id="action_form_<%= rand(19031903) %>" class="post-actions">
             <div class="btn-group pull-right">
-              <%= f.submit "Post as #{current_user.try(:firstname)}", :class => "btn dark-blue pull-right" %>
+              <%= f.submit "Post as #{current_user.try(:username) || "Anonymous"}", :class => "btn dark-blue pull-right" %>
               <a class="btn dark-blue dropdown-toggle pull-right" data-toggle="dropdown" href="#"><span class="icon-caret-down"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to_with_icon "icon-off", "Logout", destroy_user_registration_session_path, :method => :delete %></li>
